Testing lein specified permgen size