@@ -53,4 +53,5 @@
                                   [com.h2database/h2 "1.4.191"]
                                   [org.clojure/test.check "0.9.0"]]
                    :resource-paths ["model"
-                                    "test/resources"]}})
+                                    "test/resources"]
+                   :jvm-opts ["-XX:MaxPermSize=256m"]}})
